refactored prompting strategy