@@ -1,8 +1,11 @@
 package com.example.language_learning.mapper;
 
 import com.example.language_learning.dto.api.*;
+import com.example.language_learning.dto.api.details.AIJapaneseVocabularyItemDTO;
+import com.example.language_learning.dto.api.details.*;
 import com.example.language_learning.dto.lessons.*;
 import com.example.language_learning.dto.models.*;
+import com.example.language_learning.dto.models.details.*;
 import com.example.language_learning.enums.QuestionType;
 import com.example.language_learning.mapper.util.AIResponseSanitizer;
 import com.example.language_learning.responses.PracticeLessonCheckResponse;
@@ -34,23 +37,14 @@ public class ApiDtoMapper {
                 .build();
     }
 
-    public VocabularyLessonDTO toVocabularyLessonDTO(AIVocabularyLessonResponse response, String language) {
+    public VocabularyLessonDTO toVocabularyLessonDTO(AIVocabularyLessonResponse<?> response, String language) {
         return VocabularyLessonDTO.builder()
                 .title(response.title())
                 .vocabularies(response.vocabularies().stream()
-                        .filter(aiVocabulary -> aiVocabulary.nativeWord() != null && !aiVocabulary.nativeWord().isBlank())
-                        .map(aiVocab -> toWordDTO(aiVocab, language))
-                        .collect(Collectors.toList()))
-                .build();
-    }
-
-    public VocabularyLessonDTO toVocabularyLessonDTO(AIJapaneseVocabularyLessonResponse response, String language) {
-        return VocabularyLessonDTO.builder()
-                .title(response.title())
-                .vocabularies(response.vocabularies().stream()
-                        .filter(aiVocabulary -> aiVocabulary.englishTranslation() != null && !aiVocabulary.englishTranslation().isBlank())
-                        .map(aiVocab -> toWordDTO(aiVocab, language))
-                        .collect(Collectors.toList()))
+                        .filter(Objects::nonNull)
+                        .map(aiVocab -> toWordDTO(aiVocab, language)) // Polymorphic dispatch
+                        .filter(Objects::nonNull)
+                        .toList())
                 .build();
     }
 
@@ -133,18 +127,27 @@ public class ApiDtoMapper {
                 .questions(response.questions().stream()
                         .filter(aiQuestion -> aiQuestion.questionText() != null && !aiQuestion.questionText().isBlank())
                         .map(aiQuestion -> {
-                            String sanitizedAnswer = sanitizer.sanitizeEnglishField(aiQuestion.answer());
-                            List<String> sanitizedOptions = aiQuestion.answerChoices() != null
-                                ? aiQuestion.answerChoices().stream()
-                                    .map(sanitizer::sanitizeEnglishField)
-                                    .filter(Objects::nonNull)
-                                    .collect(Collectors.toList())
-                                : Collections.emptyList();
+                            String questionText;
+                            String answer;
+                            List<String> answerChoices;
+
+                            if ("japanese".equalsIgnoreCase(language)) {
+                                questionText = furiganaService.addFurigana(aiQuestion.questionText());
+                                answer = furiganaService.addFurigana(aiQuestion.answer());
+                                answerChoices = aiQuestion.answerChoices() != null
+                                        ? aiQuestion.answerChoices().stream().map(furiganaService::addFurigana).collect(Collectors.toList())
+                                        : Collections.emptyList();
+                            } else {
+                                questionText = aiQuestion.questionText();
+                                answer = aiQuestion.answer();
+                                answerChoices = aiQuestion.answerChoices() != null ? aiQuestion.answerChoices() : Collections.emptyList();
+                            }
+
                             return QuestionDTO.builder()
-                                    .questionText(sanitizer.sanitizeEnglishSentence(aiQuestion.questionText()))
+                                    .questionText(questionText)
                                     .questionType(QuestionType.MULTIPLE_CHOICE.name())
-                                    .answer(sanitizedAnswer)
-                                    .answerChoices(sanitizedOptions)
+                                    .answer(answer)
+                                    .answerChoices(answerChoices)
                                     .build();
                         }).collect(Collectors.toList()))
                 .build();
@@ -158,10 +161,35 @@ public class ApiDtoMapper {
                 .build();
     }
 
-    private WordDTO toWordDTO(AIVocabularyItemDTO aiVocab, String language) {
-        GenericWordDetailsDTO details = GenericWordDetailsDTO.builder()
-                .nativeWord(aiVocab.nativeWord())
-                .phoneticSpelling(aiVocab.phoneticSpelling())
+    private WordDTO toWordDTO(Object aiVocab, String language) {
+        return switch (aiVocab) {
+            case AIJapaneseVocabularyItemDTO j -> toWordDTO(j, language);
+            case AIKoreanVocabularyItemDTO k -> toWordDTO(k, language);
+            case AIChineseVocabularyItemDTO c -> toWordDTO(c, language);
+            case AIThaiVocabularyItemDTO t -> toWordDTO(t, language);
+            case AIItalianVocabularyItemDTO i -> toWordDTO(i, language);
+            case AISpanishVocabularyItemDTO s -> toWordDTO(s, language);
+            case AIFrenchVocabularyItemDTO f -> toWordDTO(f, language);
+            case AIGermanVocabularyItemDTO g -> toWordDTO(g, language);
+            default -> null; // Or throw an exception
+        };
+    }
+
+    private WordDTO toWordDTO(AIJapaneseVocabularyItemDTO aiVocab, String language) {
+        JapaneseWordDetailsDTO details = furiganaService.verifyAndMapJapaneseWord(aiVocab);
+
+        return WordDTO.builder()
+                .language(language)
+                .englishTranslation(sanitizer.sanitizeEnglishSentence(aiVocab.englishTranslation()))
+                .details(details)
+                .build();
+    }
+
+    private WordDTO toWordDTO(AIKoreanVocabularyItemDTO aiVocab, String language) {
+        KoreanWordDetailsDTO details = KoreanWordDetailsDTO.builder()
+                .hangul(aiVocab.hangul())
+                .hanja(aiVocab.hanja())
+                .romaja(aiVocab.romaja())
                 .build();
         return WordDTO.builder()
                 .language(language)
@@ -170,9 +198,79 @@ public class ApiDtoMapper {
                 .build();
     }
 
-    private WordDTO toWordDTO(AIJapaneseVocabularyItemDTO aiVocab, String language) {
-        JapaneseWordDetailsDTO details = furiganaService.verifyAndMapJapaneseWord(aiVocab);
+    private WordDTO toWordDTO(AIChineseVocabularyItemDTO aiVocab, String language) {
+        ChineseWordDetailsDTO details = ChineseWordDetailsDTO.builder()
+                .simplified(aiVocab.simplified())
+                .traditional(aiVocab.traditional())
+                .pinyin(aiVocab.pinyin())
+                .toneNumber(aiVocab.toneNumber())
+                .build();
+        return WordDTO.builder()
+                .language(language)
+                .englishTranslation(sanitizer.sanitizeEnglishSentence(aiVocab.englishTranslation()))
+                .details(details)
+                .build();
+    }
 
+    private WordDTO toWordDTO(AIThaiVocabularyItemDTO aiVocab, String language) {
+        ThaiWordDetailsDTO details = ThaiWordDetailsDTO.builder()
+                .thaiScript(aiVocab.thaiScript())
+                .romanization(aiVocab.romanization())
+                .tonePattern(aiVocab.tonePattern())
+                .build();
+        return WordDTO.builder()
+                .language(language)
+                .englishTranslation(sanitizer.sanitizeEnglishSentence(aiVocab.englishTranslation()))
+                .details(details)
+                .build();
+    }
+
+    private WordDTO toWordDTO(AIItalianVocabularyItemDTO aiVocab, String language) {
+        ItalianWordDetailsDTO details = ItalianWordDetailsDTO.builder()
+                .lemma(aiVocab.lemma())
+                .gender(aiVocab.gender())
+                .pluralForm(aiVocab.pluralForm())
+                .build();
+        return WordDTO.builder()
+                .language(language)
+                .englishTranslation(sanitizer.sanitizeEnglishSentence(aiVocab.englishTranslation()))
+                .details(details)
+                .build();
+    }
+
+    private WordDTO toWordDTO(AIGermanVocabularyItemDTO aiVocab, String language) {
+        GermanWordDetailsDTO details = GermanWordDetailsDTO.builder()
+                .lemma(aiVocab.lemma())
+                .gender(aiVocab.gender())
+                .pluralForm(aiVocab.pluralForm())
+                .separablePrefix(aiVocab.separablePrefix())
+                .build();
+        return WordDTO.builder()
+                .language(language)
+                .englishTranslation(sanitizer.sanitizeEnglishSentence(aiVocab.englishTranslation()))
+                .details(details)
+                .build();
+    }
+
+    private WordDTO toWordDTO(AIFrenchVocabularyItemDTO aiVocab, String language) {
+        FrenchWordDetailsDTO details = FrenchWordDetailsDTO.builder()
+                .lemma(aiVocab.lemma())
+                .gender(aiVocab.gender())
+                .pluralForm(aiVocab.pluralForm())
+                .build();
+        return WordDTO.builder()
+                .language(language)
+                .englishTranslation(sanitizer.sanitizeEnglishSentence(aiVocab.englishTranslation()))
+                .details(details)
+                .build();
+    }
+
+    private WordDTO toWordDTO(AISpanishVocabularyItemDTO aiVocab, String language) {
+        SpanishWordDetailsDTO details = SpanishWordDetailsDTO.builder()
+                .lemma(aiVocab.lemma())
+                .gender(aiVocab.gender())
+                .pluralForm(aiVocab.pluralForm())
+                .build();
         return WordDTO.builder()
                 .language(language)
                 .englishTranslation(sanitizer.sanitizeEnglishSentence(aiVocab.englishTranslation()))
